samples/_failures_safe/1761446520_eeab85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f12fec83.c: In function ‘main’:
./samples/SAFE/__tmp_f12fec83.c:146:16: error: missing terminating " character
  146 |         printf("Not a square
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f12fec83.c:146:9: error: expected expression at end of input
  146 |         printf("Not a square
      |         ^~~~~~
./samples/SAFE/__tmp_f12fec83.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f12fec83.c:146:9: error: expected declaration or statement at end of input
